# txt2sql

./: .env.example  .gitignore  LICENSE  README.md  REALEASE_NOTES.md  app.py  clean-git-history.ps1  db_utils.py  main.py  pyproject.toml  replacements.txt  requirements.txt  run_ui.py  system_prompt.txt  txt2sql_agent.py
.streamlit/: config.toml
src/: txt2sql_agent.py
txt2pdf-mirror.git/: config  packed-refs
